[tool.poetry]
name = "printer"
version = "0.1.0"
description = "A project for COR-101"
authors = ["EOF-D <END-OFD@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.8"
rich = "^13.6.0"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
